i put the indexhome en style inthere

--- a/public/storytelling.html
+++ b/public/storytelling.html
@@ -25,7 +25,7 @@
     <!-- Sectie: Genres -->
     <section id="genres-section" class="active">
         <div class="header-container">
-            <a href="#" class="round-nav knop-terug">
+            <a href="indexhome.html" class="round-nav knop-terug">
                 <i class="fas fa-home"></i>
             </a>
             <img src="/public/pictures/logo svglogo.png" alt="Efteling logo" class="logo">
