set separate routes and controllers files for backend, moved generated images to assets

--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,22 @@
     <!-- Heroes, villains, and genres buttons -->
     <section class="choices">
       <button class="hero button show" data-name="Snow White">
-        <img src="./assets/images/hero-1.png" width="20%" />
+        <img src="./assets/example-images/hero-1.png" width="20%" />
       </button>
       <button class="hero button show" data-name="Tinkerbell">
-        <img src="./assets/images/hero-2.png" width="20%" />
+        <img src="./assets/example-images/hero-2.png" width="20%" />
       </button>
       <button class="villain button" data-name="Evil Queen">
-        <img src="./assets/images/villain-1.png" width="20%" />
+        <img src="./assets/example-images/villain-1.png" width="20%" />
       </button>
       <button class="villain button" data-name="Captain Hook">
-        <img src="./assets/images/villain-2.png" width="20%" />
+        <img src="./assets/example-images/villain-2.png" width="20%" />
       </button>
       <button class="genre button" data-name="Comedy">
-        <img src="./assets/images/genre-1.jpg" width="20%" />
+        <img src="./assets/example-images/genre-1.jpg" width="20%" />
       </button>
       <button class="genre button" data-name="Adventure">
-        <img src="./assets/images/genre-2.png" width="20%" />
+        <img src="./assets/example-images/genre-2.png" width="20%" />
       </button>
     </section>
 
