i change the datnames and the links

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div class="overlay">
         <!-- Logo bovenaan -->
         <div class="logo-container">
-            <img src="/public/pictures/logo svglogo.png" alt="Efteling Logo" class="logo">
+            <img src="pictures/logo svglogo.png" alt="Efteling Logo" class="logo">
         </div>
     
         <div class="text-container">
