integrated backend to front-end from story start to choice making feature

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 
     <title>Mijn Sprookje</title>
-    <link rel="stylesheet" href="styles/stylehome.css">
+    <link rel="stylesheet" href="styles/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
